# KursovayaLibrary2

./: .gitignore  CMakeLists.txt  KL2_API.h  KL2_Manager.cpp  KL2_Manager.hpp  README.md  libs
Graphics/: IndexBuffer.hpp  Renderer.cpp  Renderer.hpp  RenderingPreset.hpp  Shader.hpp  TextRenderer.cpp  TextRenderer.hpp  Texture.hpp  VertexArray.hpp  VertexBuffer.hpp
Graphics/Abstractions/: FrameBuffer.cpp  FrameBuffer.hpp  IndexBuffer.cpp  IndexBuffer.hpp  RenderBuffer.cpp  RenderBuffer.hpp  TextRenderer.cpp  TextRenderer.hpp  Texture.cpp  Texture.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp
Graphics/Primitives/: FrameBuffer.cpp  FrameBuffer.hpp  IndexBuffer.cpp  IndexBuffer.hpp  RenderBuffer.cpp  RenderBuffer.hpp  Renderer.cpp  Renderer.hpp  RenderingPreset.cpp  RenderingPreset.hpp  Shader.cpp  Shader.hpp  ShaderProgram.cpp  ShaderProgram.hpp  Texture.cpp  Texture.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp
Input/: Keyboard.cpp  Keyboard.hpp  Mouse.cpp  Mouse.hpp
Maths/: Matrix.hpp  Vector.hpp
Tools/: ArrayView.hpp  ErrorsSystem.cpp  ErrorsSystem.hpp  Event.cpp  Event.hpp  GLDebug.hpp
Tools/Connections/: BindingSlot.h  ConnectionSlot.h
Tools/FileTypesReaders/: Obj.cpp  Obj.h
Tools/UsefullMacros/: ApplyMacroInLoop.h  ComparisonByBytes.h  DelayMacro.h  RemoveBrackets.h
Window/: Window.cpp  Window.hpp
